# PlantTracker

./: .env.dev  .gitignore  CNAME  Cargo.toml  README.md  build-release.py  mkdocs.yml
.github/workflows/: codeql.yml  pr_check.yaml  pr_checks.yaml
backend/: Cargo.toml
backend/src/: main.rs
docs/: index.md  plan.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  TemperatureMonitor.tsx  TemperatureView.tsx  TopAppBar.tsx
node/: Cargo.toml  README.md  rust-toolchain.toml
node/.cargo/: config.toml
node/src/: main.rs
plant_node/: CMakeLists.txt
plant_node/inc/: access_point.hpp  ap_config.hpp  lwipopts.h  port.h  tcp_client.hpp
plant_node/lib/dhcpserver/: dhcpserver.h
plant_node/lib/dnsserver/: dnsserver.h
plant_node/src/: access_point.cpp  plant_node.cpp  tcp_client.cpp
temp/frontend/: index.html
temp/frontend/assets/: index-BYuEDYtx.js
