[workspace]
members = ["backend", "node"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Dominik Trochowski", "Vladyslav Hlushchenko"]
description = "A web service to monitor multiple environment sensors related to plant care"
edition = "2021"

[workspace.dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
dotenvy = "0.15.0"
rand = "0.8.5"
serde_json = "1.0.114"