[package]
name = "planttracker-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = { workspace = true }
actix-web = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
